--- a/sql資料庫實務/1221.md
+++ b/sql資料庫實務/1221.md
@@ -111,7 +111,7 @@ echo $row_num .  "  records found ! " . "<br/><br/>";
 ```
 having ksu_std_department != ''
 ```
-# 不及格顯示紅色 
+# 不及格顯示紅色  資料遞減排序
 ```
 <?php
  $db_host = "localhost";
