--- a/資料結構/1227排序法.md
+++ b/資料結構/1227排序法.md
@@ -1,1 +1,173 @@
+# 快速排序法 (Quick Sort)
+```
+將一個數列的數從小到大做排列的方法
+優點:
+演算法複雜度低(), 能快速完成排列
+方法:
+1.     確定數列中最後一個數在排序的位置
+2.     將位置之前的數以及位置之後的數再做快速排序
+3.     直到沒有數為止
+說明:
+確定數列中最後一個數在排序的位置
+以最後一個數為基準數, 在數列中比基準數大的數搬到基準數的後面, 在數列中比基準數小的數搬到基準數的前面
+```
+# 快速排序法程式碼
+```
+//QuickSort.h
+int QuickMove(int*, int, int);
+int QuickSorting(int*, int, int);
+```
+```
+//QuickSort.cpp
+#include "stdio.h"
+#include "stdlib.h"
+#include "time.h"
+#include "QuickSort.h"
 
+int main(){
+	int data[20];
+	for(int i=0;i<20 ;i++){
+		int m=0, n=1;
+		while(n==1){
+			n=0;
+			srand((unsigned)time(NULL));
+			m = (rand()*(rand()%10))%100;
+			// 以時間序列當亂數種子 取0-99的亂數 
+			for(int j=0;j<i;j++){
+				if(m==data[j]) n=1;
+			}	
+		}
+		data[i]=m;
+	}
+	printf("有20筆資料值:\n"); 
+	for(int i=0;i<20 ;i++){
+		printf("%d, ", data[i]);
+	}
+	printf("\n\n");
+	QuickSorting(data, 0, 19);
+	printf("使用快速排序法(Quick Sort)排列後:\n");
+	for(int i=0;i<20 ;i++){
+		printf("%d, ", data[i]);
+	}
+	printf("\n");
+	return 0;	
+}
+
+int QuickSorting(int data[20], int f, int l){
+	int k = QuickMove(data, f, l);
+	if (k-1 > f) QuickSorting(data, f, k-1);
+	if (l > k+1) QuickSorting(data, k+1, l);	
+}
+
+int QuickMove(int data[20], int f, int l){
+	if(f==l) return 1;
+	int t = data[l];
+	int m = l;
+	int p = l;
+	for(int i=f; i<=l; i++){
+		if (data[i]>t){
+			int k = data[i];
+			for(int j = i; j<m; j++){
+				data[j]=data[j+1];
+			}
+			data[m] = k;
+			i--; 
+			l--;
+			p--;
+		}
+	}
+	return p;
+}
+ 
+```
+# 快速排序法程式碼執行結果
+```
+有20筆資料值:
+64, 60, 69, 26, 0, 24, 73, 94, 76, 96, 65, 59, 21, 48, 25, 68, 28, 91, 90, 9,
+
+使用快速排序法(Quick Sort)排列後:
+0, 9, 21, 24, 25, 26, 28, 48, 59, 60, 64, 65, 68, 69, 73, 76, 90, 91, 94, 96,
+
+--------------------------------
+Process exited after 26.12 seconds with return value 0
+請按任意鍵繼續 . . .
+```
+# 氣泡排序法 (Bubble Sort)
+```
+演算法：
+1.  從數列的第一個數開始，依序與下一個數比較，比較小的放前面，直到所有數列比較完畢為止。(此時最大的數必被擠到最後一個位置)
+2.  排除最後一個數，將前面的數再執行此演算法。
+3.  直到前面沒有數為止。
+```
+# 氣泡排序法程式碼
+```
+// BubbleSort.h
+int BubbleSorting(int*, int, int);
+int BubbleMove(int*, int, int);
+```
+```
+// BubbleSort.cpp
+#include "stdio.h"
+#include "stdlib.h"
+#include "time.h"
+#include "BubbleSort.h"
+
+int main(){
+	int data[20];
+	for(int i=0;i<20 ;i++){
+		int m=0, n=1;
+		while(n==1){
+			n=0;
+			srand((unsigned)time(NULL));
+			m = (rand()*(rand()%10))%100;
+			// 以時間序列當亂數種子 取0-99的亂數 
+			for(int j=0;j<i;j++){
+				if(m==data[j]) n=1;
+			}	
+		}
+		data[i]=m;
+	}
+	printf("有20筆資料值:\n"); 
+	for(int i=0;i<20 ;i++){
+		printf("%d, ", data[i]);
+	}
+	printf("\n\n");
+	BubbleSorting(data, 0, 19);
+	printf("使用氣泡排序法(Bubble Sort)排列後:\n");
+	for(int i=0;i<20 ;i++){
+		printf("%d, ", data[i]);
+	}
+	printf("\n");
+	return 0;	
+}
+
+int BubbleSorting(int data[20], int f, int l){
+	for(int i=l; i>f; i--){
+		BubbleMove(data, f, i);
+	}	
+}
+
+int BubbleMove(int data[20], int f, int l){
+	for(int i=f; i<l; i++){
+		if (data[i+1]<data[i]){
+			int k = data[i+1];
+			data[i+1]=data[i];
+			data[i]=k;
+		}
+	}
+	return 0;
+}
+ 
+```
+# 氣泡排序法程式碼執行結果
+```
+有20筆資料值:
+68, 92, 75, 14, 41, 90, 0, 59, 86, 64, 66, 84, 35, 13, 96, 54, 83, 20, 52, 82,
+
+使用氣泡排序法(Bubble Sort)排列後:
+0, 13, 14, 20, 35, 41, 52, 54, 59, 64, 66, 68, 75, 82, 83, 84, 86, 90, 92, 96,
+
+--------------------------------
+Process exited after 20.53 seconds with return value 0
+請按任意鍵繼續 . . .
+```
