--- a/sql資料庫實務/1228.md
+++ b/sql資料庫實務/1228.md
@@ -1,3 +1,26 @@
-# 搜尋
+# 搜尋.html
+```
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Select exercise</title>
+</head>
+<body>
+  <h3> ksu select operation </h3>
+  <!--不對字符編碼 -->    
+  <form enctype="multipart/form-data" method="post" action="ksu_select4.php" >
+	Query ksu_std_table for the number of students from every department
+	<br/>
+    <br/>
+	Department alias:
+	<input type="text" value="CS" name="dept" size="2">
+	<br/>
+    <input type="submit" name="sub" val="Query"/>
+  </form>
+</body>
+</html>
+```
+# 搜尋結果.php
 ```
 ```
