--- a/sql資料庫實務/1228.md
+++ b/sql資料庫實務/1228.md
@@ -79,3 +79,31 @@ echo $row_num .  "  records found ! " . "<br/><br/>";
 <input type="submit" name="sub" value="Back"/>
 </form>
 ```
+# 搜尋成績.html
+```
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Select exercise</title>
+</head>
+<body>
+  <h3> ksu select operation </h3>
+  <!--不對字符編碼 -->    
+  <form enctype="multipart/form-data" method="post" action="ksu_select4.php" >
+	Query ksu_std_table for the number of students from every department
+	<br/>
+    <br/>
+	Department alias:
+	<input type="text" value="CS" name="dept" size="2">
+	<br/>
+	<br/>
+	Grade:
+	<input type="text" value="0" name="grade" size="3">
+	<br/>
+	<br/>
+    <input type="submit" name="sub" val="Query"/>
+  </form>
+</body>
+</html>
+```
