--- a/sql資料庫實務/1228.md
+++ b/sql資料庫實務/1228.md
@@ -165,3 +165,84 @@ echo $row_num .  "  records found ! " . "<br/><br/>";
 <input type="submit" name="sub" value="Back"/>
 </form>
 ```
+# 取代html
+```
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Select exercise</title>
+</head>
+<body>
+  <h3> ksu select operation </h3>
+  <!--不對字符編碼 -->    
+  <form enctype="multipart/form-data" method="post" action="ksu_select4.php" >
+	Query ksu_std_table for the number of students from every department
+	<br/>
+    <br/>
+	Student name:
+	<input type="text"  name="std_name" size="5">
+	<br/>
+    <input type="submit" name="sub" val="Query"/>
+  </form>
+</body>
+</html>
+```
+# # 取代php
+```
+<?php
+ $std_name=str_replace("'","''",$_REQUEST['std_name']);    
+ $db_host = "localhost";
+ $db_name = "test";
+ $db_table = "ksu_std_table";
+ $db_user = "root";
+ $db_password = "";
+ // check connection
+ $conn = mysqli_connect($db_host, $db_user, $db_password);
+ if(empty($conn)){
+	print  mysqli_error ($conn);
+    die ("Unable to connect to DB！" );
+	exit;
+ }  
+ if(!mysqli_select_db( $conn, $db_name)){
+	die("DB is not existed");
+	exit;
+ }  
+ //main scope  
+mysqli_set_charset($conn,'utf8');
+
+echo "ksu_std_table : the number of students as follows"."<br/><br/>";
+$result = mysqli_query($conn,
+						"SELECT ksu_std_name ,ksu_std_grade 
+							FROM ksu_std_table
+							where ksu_std_name like '%$std_name%'
+							order by ksu_std_grade");
+ echo "<table border='1'>
+ <tr>
+   <th> Original Name </th>  <th> updated name </th>  <th> grade </th> <th> Memo </th>
+ </tr>";
+$row_num=0;
+while($row = mysqli_fetch_array($result))
+{
+	echo"<tr>";
+	echo"<td>" . $row['ksu_std_name'] . "</td>";
+	echo"<td>" . str_replace($std_name, 'Taiwan' ,$row['ksu_std_name']) . "</td>";
+	echo"<td>" . $row['ksu_std_grade'] . "</td>";
+	
+	
+	if ($row['ksu_std_grade']<60){
+		echo "<td style=\"background-color:yellow\">". " make up " . "</td>";
+	}
+	else{
+		echo"<td>" ."". "</td>";
+	}
+	echo "</tr>";
+	$row_num = $row_num+1;
+}
+echo"</table>";
+echo $row_num .  "  records found ! " . "<br/><br/>";
+?> 
+<form enctype="multipart/form-data"  method = "post" action="ksu_select4.html">
+<input type="submit" name="sub" value="Back"/>
+</form>
+```
