--- a/Linux/1229程序管理.md
+++ b/Linux/1229程序管理.md
@@ -1,1 +1,85 @@
+```
+每個程序有獨自的PID
+```
+```
+原本運作的bash就是父程序
+被父程序觸發的另一個bash就是子程序
+```
+```
+fork and exec:程序呼叫的流程
+```
+```
+ps -l
+● F:代表這個程序旗標 (process flags)，說明這個程序的總結權限
 
+常見號碼有：
+● 若為 4 表示此程序的權限為 root
+● 若為 1 則表示此子程序僅進行複製(fork)而沒有實際執行(exec)
+
+● S：代表這個程序的狀態 (STAT)
+主要的狀態有：
+● R(Running)：該程式正在運作中；
+● S(Sleep)：該程式目前正在睡眠狀態(idle)，但可以被喚醒(signal)。
+● D：不可被喚醒的睡眠狀態，通常這支程式可能在等待 I/O 的情況(例如列印)
+● T：停止狀態(stop)，可能是在工作控制(背景暫停)或除錯 (traced)狀態；
+● Z(Zombie)：僵屍狀態，程序已經終止但卻無法被移除至記憶體外。
+● UID/PID/PPID：代表『此程序被該 UID 所擁有/程序的 PID 號碼/此程序的父程序 PID 號碼』
+● C：代表 CPU 使用率，單位為百分比；
+● PRI/NI：Priority/Nice 的縮寫，代表此程序被 CPU 所執行的優先順序，數值越小代表該程序越快被 CPU 執行。詳細的 PRI 與 NI 將在後續說明。
+● ADDR/SZ/WCHAN：都與記憶體有關，ADDR 是 kernel function，指出該程序在記憶體的哪個部分，如果是個 running 的程序，一般就會顯示『 - 』 / SZ 代表此程序用掉多少記憶體 / WCHAN 表示目前程序是否運作中，同樣的， 若為 - 表示正在運作中。
+● TTY：登入者的終端機位置，若為遠端登入則使用動態終端介面 (pts/n)；
+● TIME：使用掉的 CPU 時間，注意，是此程序實際花費 CPU 運作的時間，而不是系統時間；
+● CMD：就是 command 的縮寫，造成此程序的觸發程式之指令為何。
+```
+```
+ps aux
+> 你會發現 ps -l 與 ps aux 顯示的項目並不相同！
+● USER:該 process 屬於那個使用者帳號的？
+● PID ：該 process 的程序識別碼。
+● %CPU：該 process 使用掉的 CPU 資源百分比；
+● %MEM：該 process 所佔用的實體記憶體百分比；
+● VSZ ：該 process 使用掉的虛擬記憶體量 (Kbytes)
+● RSS ：該 process 佔用的固定的記憶體量 (Kbytes)
+● TTY ：該 process 是在那個終端機上面運作，若與終端機無關則顯示 ?，另外， tty1-tty6 是本機上面的登入者程序，若為 pts/0 等等的，則表示為由網路連接進主機的程序。
+● STAT：該程序目前的狀態，狀態顯示與 ps -l 的 S 旗標相同 (R/S/T/Z)
+● START：該 process 被觸發啟動的時間；
+● TIME ：該 process 實際使用 CPU 運作的時間。
+● COMMAND：該程序的實際指令為何？
+```
+```
+ps -lA
+> 每個欄位與 ps -l 的輸出情況相同，但顯示的程序則包括系統所有的程序。
+```
+```
+ps axjf
+> 類似樹狀架構的關聯
+> 這是以ssh網路連線進虛擬機來測試的，程序之間是有相關性的。
+```
+### 僵屍 (zombie)
+```
+> 造成僵屍程序的成因是因為該程序應該已經執行完畢，或者是因故應該要終止了，
+但是該程序的父程序卻無法完整的將該程序結束掉，而造成那個程序一直存在記憶體當中。
+
+> 後面還接上 <defunct> 時，就代表該程序是僵屍程序，
+例如：
+apache  8683  0.0  0.9 83384 9992 ?   Z  14:33   0:00 /usr/sbin/httpd <defunct>
+```
+## top：動態觀察程序的變化
+```
+> top [-d 數字] | top [-bnp]
+● -d：後面接秒數，就是整個程序畫面更新的秒數。預設是5秒；
+● -b：以批次的方式執行 top ，還有更多的參數可以使用喔！
+      通常會搭配資料流重導向來將批次的結果輸出成為檔案。
+● -n：與 -b 搭配，意義是，需要進行幾次 top 的輸出結果。
+● -p：指定某些個 PID 來進行觀察監測而已。
+
+> 在 top 執行過程當中可以使用的按鍵指令：
+● ? ：顯示在 top 當中可以輸入的按鍵指令；
+● P ：以 CPU 的使用資源排序顯示；
+● M ：以 Memory 的使用資源排序顯示；
+● N ：以 PID 來排序喔！
+● T ：由該 Process 使用的 CPU 時間累積 (TIME+) 排序。
+● k ：給予某個 PID 一個訊號  (signal)
+● r ：給予某個 PID 重新制訂一個 nice 值。
+● q ：離開 top 軟體的按鍵。
+```
