--- a/Linux/1229程序管理.md
+++ b/Linux/1229程序管理.md
@@ -26,7 +26,9 @@ ps -l
 ● UID/PID/PPID：代表『此程序被該 UID 所擁有/程序的 PID 號碼/此程序的父程序 PID 號碼』
 ● C：代表 CPU 使用率，單位為百分比；
 ● PRI/NI：Priority/Nice 的縮寫，代表此程序被 CPU 所執行的優先順序，數值越小代表該程序越快被 CPU 執行。詳細的 PRI 與 NI 將在後續說明。
-● ADDR/SZ/WCHAN：都與記憶體有關，ADDR 是 kernel function，指出該程序在記憶體的哪個部分，如果是個 running 的程序，一般就會顯示『 - 』 / SZ 代表此程序用掉多少記憶體 / WCHAN 表示目前程序是否運作中，同樣的， 若為 - 表示正在運作中。
+● ADDR/SZ/WCHAN：都與記憶體有關，ADDR 是 kernel function，指出該程序在記憶體的哪個部分，
+如果是個 running 的程序，一般就會顯示『 - 』 / SZ 代表此程序用掉多少記憶體 / WCHAN 表示目前程序是否運作中，
+同樣的， 若為 - 表示正在運作中。
 ● TTY：登入者的終端機位置，若為遠端登入則使用動態終端介面 (pts/n)；
 ● TIME：使用掉的 CPU 時間，注意，是此程序實際花費 CPU 運作的時間，而不是系統時間；
 ● CMD：就是 command 的縮寫，造成此程序的觸發程式之指令為何。
@@ -40,7 +42,8 @@ ps aux
 ● %MEM：該 process 所佔用的實體記憶體百分比；
 ● VSZ ：該 process 使用掉的虛擬記憶體量 (Kbytes)
 ● RSS ：該 process 佔用的固定的記憶體量 (Kbytes)
-● TTY ：該 process 是在那個終端機上面運作，若與終端機無關則顯示 ?，另外， tty1-tty6 是本機上面的登入者程序，若為 pts/0 等等的，則表示為由網路連接進主機的程序。
+● TTY ：該 process 是在那個終端機上面運作，若與終端機無關則顯示 ?，
+另外， tty1-tty6 是本機上面的登入者程序，若為 pts/0 等等的，則表示為由網路連接進主機的程序。
 ● STAT：該程序目前的狀態，狀態顯示與 ps -l 的 S 旗標相同 (R/S/T/Z)
 ● START：該 process 被觸發啟動的時間；
 ● TIME ：該 process 實際使用 CPU 運作的時間。
