--- a/Linux/1229程序管理.md
+++ b/Linux/1229程序管理.md
@@ -25,7 +25,7 @@ ps -l
 ● Z(Zombie)：僵屍狀態，程序已經終止但卻無法被移除至記憶體外。
 ● UID/PID/PPID：代表『此程序被該 UID 所擁有/程序的 PID 號碼/此程序的父程序 PID 號碼』
 ● C：代表 CPU 使用率，單位為百分比；
-● PRI/NI：Priority/Nice 的縮寫，代表此程序被 CPU 所執行的優先順序，數值越小代表該程序越快被 CPU 執行。詳細的 PRI 與 NI 將在後續說明。
+● PRI/NI：Priority/Nice 的縮寫，代表此程序被 CPU 所執行的優先順序，數值越小代表該程序越快被 CPU 執行。
 ● ADDR/SZ/WCHAN：都與記憶體有關，ADDR 是 kernel function，指出該程序在記憶體的哪個部分，
 如果是個 running 的程序，一般就會顯示『 - 』 / SZ 代表此程序用掉多少記憶體 / WCHAN 表示目前程序是否運作中，
 同樣的， 若為 - 表示正在運作中。
