--- a/Linux/1229程序管理.md
+++ b/Linux/1229程序管理.md
@@ -86,3 +86,17 @@ apache  8683  0.0  0.9 83384 9992 ?   Z  14:33   0:00 /usr/sbin/httpd <defunct>
 ● r ：給予某個 PID 重新制訂一個 nice 值。
 ● q ：離開 top 軟體的按鍵。
 ```
+```
+● PID ：每個 process 的 ID ；
+● USER：該 process 所屬的使用者；
+● PR ：Priority 的簡寫，程序的優先執行順序，越小越早被執行；
+● NI ：Nice 的簡寫，與 Priority 有關，也是越小越早被執行；
+● %CPU：CPU 的使用率；
+● %MEM：記憶體的使用率；
+● TIME+：CPU 使用時間的累加；
+
+● top 預設使用 CPU 使用率 (%CPU) 作為排序的重點
+● 如果想要以記憶體使用率排序，則可以按下『m』
+● 若要回復則按下『p』即可。
+● 如果想要離開 top 則按下『 q 』吧！
+```
