--- a/Linux/1229程序管理.md
+++ b/Linux/1229程序管理.md
@@ -100,3 +100,27 @@ apache  8683  0.0  0.9 83384 9992 ?   Z  14:33   0:00 /usr/sbin/httpd <defunct>
 ● 若要回復則按下『p』即可。
 ● 如果想要離開 top 則按下『 q 』吧！
 ```
+### pstree指令
+```
+> pstree [-A|U] [-up]
+● -A  ：各程序樹之間的連接以 ASCII 字元來連接；
+● -U  ：各程序樹之間的連接以萬國碼的字元來連接。
+      在某些終端介面下可能會有錯誤；
+● -p  ：並同時列出每個 process 的 PID；
+● -u  ：並同時列出每個 process 的所屬帳號名稱。
+
+> pstree：列出目前系統上面所有的程序樹的相關性
+```
+### kill:給予程序一個訊號 (signal)
+```
+> kill -訊號代號 PID
+```
+| 代號 | 名稱 | 內容|
+| --- | ---| ---|
+| 1 | SIGHUP | 啟動被終止的程序，可讓該 PID 重新讀取自己的設定檔，類似重新啟動 |
+| 2 | SIGINT |相當於用鍵盤輸入 [ctrl]-c 來中斷一個程序的進行 |
+| 9 |SIGKILL | 代表強制中斷一個程序的進行，如果該程序進行到一半， 那麼尚未完成的部分可能會有『半產品』產生，類似 vim會有 .filename.swp 保留下來。 |
+| 15 | SIGTERM | 以正常的結束程序來終止該程序。由於是正常的終止， 所以後續的動作會將他完成。不過，如果該程序已經發生問題，就是無法使用正常的方法終止時， 輸入這個 signal 也是沒有用的。 |
+| 19 | SIGSTOP | 相當於用鍵盤輸入 [ctrl]-z 來暫停一個程序的進行 |
+
+
