--- a/Linux/1229程序管理.md
+++ b/Linux/1229程序管理.md
@@ -123,4 +123,12 @@ apache  8683  0.0  0.9 83384 9992 ?   Z  14:33   0:00 /usr/sbin/httpd <defunct>
 | 15 | SIGTERM | 以正常的結束程序來終止該程序。由於是正常的終止， 所以後續的動作會將他完成。不過，如果該程序已經發生問題，就是無法使用正常的方法終止時， 輸入這個 signal 也是沒有用的。 |
 | 19 | SIGSTOP | 相當於用鍵盤輸入 [ctrl]-z 來暫停一個程序的進行 |
 
+```
+> killall [-iIe] [command name]
 
+選項與參數：
+● -i  ：interactive 的意思，互動式的，若需要刪除時，會出現提示字元給使用者；
+● -e  ：exact 的意思，表示『後面接的 command name 要一致』，但整個完整的指令
+      不能超過 15 個字元。
+● -I  ：指令名稱(可能含參數)忽略大小寫。
+```
