--- a/Linux/1229程序管理.md
+++ b/Linux/1229程序管理.md
@@ -132,3 +132,94 @@ apache  8683  0.0  0.9 83384 9992 ?   Z  14:33   0:00 /usr/sbin/httpd <defunct>
       不能超過 15 個字元。
 ● -I  ：指令名稱(可能含參數)忽略大小寫。
 ```
+```
+● nice：新執行的指令即給予新的 nice 值
+> nice [-n 數字] command
+● -n  ：後面接一個數值，讓原本的 nice 加上這個新的數值之意。修改後的最終數值的範圍為 -20 ~ 19。
+
+● renice：已存在程序的 nice 重新調整
+> renice [number] PID
+```
+## 系統資源的觀察
+```
+● free ：觀察記憶體使用情況
+● uname：查閱系統與核心相關資訊
+● uptime：觀察系統啟動時間與工作負載
+● netstat ：追蹤網路或插槽檔
+● dmesg ：分析核心產生的訊息
+● vmstat ：偵測系統資源變化
+```
+### free ：觀察記憶體使用情況
+```
+> free [-b|-k|-m|-g|-h] [-t] [-s N -c N]
+選項與參數：
+● -b  ：直接輸入 free 時，顯示的單位是 Kbytes，我們可以使用 b(bytes), m(Mbytes)
+      k(Kbytes), 及 g(Gbytes) 來顯示單位喔！也可以直接讓系統自己指定單位 (-h)
+● -t  ：在輸出的最終結果，顯示實體記憶體與 swap 的總量。
+● -s  ：可以讓系統每幾秒鐘輸出一次，不間斷的一直輸出的意思！對於系統觀察挺有效！
+● -c  ：與 -s 同時處理～讓 free 列出幾次的意思～
+```
+### uname：查閱系統與核心相關資訊
+```
+> uname [-asrmpi]
+選項與參數：
+● -a  ：所有系統相關的資訊，包括底下的資料都會被列出來；
+● -s  ：系統核心名稱
+● -r  ：核心的版本
+● -m  ：本系統的硬體名稱，例如 i686 或 x86_64 等；
+● -p  ：CPU 的類型，與 -m 類似，只是顯示的是 CPU 的類型！
+● -i  ：硬體的平台 (ix86)
+```
+### uptime：觀察系統啟動時間與工作負載
+```
+● 顯示出目前系統已經開機多久的時間，以及 1, 5, 15 分鐘的平均負載。
+```
+### netstat：追蹤網路或插槽(socket)檔
+```
+● netstat 的輸出分為兩大部分:網路與系統自己的程序相關性部分
+> netstat -[atunlp]
+選項與參數：
+● -a  ：將目前系統上所有的連線、監聽、Socket 資料都列出來
+● -t  ：列出 tcp 網路封包的資料
+● -u  ：列出 udp 網路封包的資料
+● -n  ：不以程序的服務名稱，以埠號 (port number) 來顯示；
+● -l  ：列出目前正在網路監聽 (listen) 的服務；
+● -p  ：列出該網路服務的程序 PID
+```
+### vmstat ：偵測系統資源變化
+```
+選項與參數：
+● -a  ：使用 inactive/active(活躍與否) 取代 buffer/cache 的記憶體輸出資訊；
+● -f  ：開機到目前為止，系統複製 (fork) 的程序數；
+● -s  ：將一些事件 (開機至目前為止) 導致的記憶體變化情況列表說明；
+● -S  ：後面可以接單位，讓顯示的資料有單位。例如 K/M 取代 bytes 的容量；
+● -d  ：列出磁碟的讀寫總量統計表
+● -p  ：後面列出分割槽，可顯示該分割槽的讀寫總量統計表
+
+程序欄位 (procs) 的項目分別為：
+r：等待運作中的程序數量；
+b：不可被喚醒的程序數量。
+```
+## fuser：藉由檔案(或檔案系統)找出正在使用該檔案的程序
+```
+> fuser [-umv] [-k [i] [-signal]] file/dir
+
+選項與參數：
+● -u  ：除了程序的 PID 之外，同時列出該程序的擁有者；
+● -m  ：後面接的那個檔名會主動的上提到該檔案系統的最頂層，對 umount 不成功很有效！
+● -v  ：可以列出每個檔案與程序還有指令的完整相關性！
+● -k  ：找出使用該檔案/目錄的 PID ，並試圖以 SIGKILL 這個訊號給予該 PID；
+● -i  ：必須與 -k 配合，在刪除 PID 之前會先詢問使用者意願！
+● -signal：例如 -1 -15 等等，若不加的話，預設是 SIGKILL (-9) 囉！
+
+c ：此程序在當前的目錄下(非次目錄)；
+e ：可被觸發為執行狀態；
+f ：是一個被開啟的檔案；
+r ：代表頂層目錄 (root directory)；
+F ：該檔案被開啟了，不過在等待回應中；
+m ：可能為分享的動態函式庫
+
+> 刪除
+fuser -mki /home
+
+```
